<resources>
    <string name="app_name">DO it !</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign-in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="do_it">do it !</string>
    <string name="remember_me">Remember Me</string>
    <string name="dont_have_an_account">Dont have an Account?</string>
    <string name="nom">Last name</string>
    <string name="prenom">First name</string>
    <string name="date">Birth Date</string>
    <string name="adresse">Address</string>
    <string name="confpass">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="confirm">Confirm</string>
    <string name="change_password">Change Your Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
    <string name="home">Home</string>
    <string name="Add">Add</string>
    <string name="Log_out">Log-out</string>
    <string name="Settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data">JJ/MM/AAAAA</string>
    <string name="like">like</string>
    <string name="share">share</string>
    <string name="liked_by">Liked by ...</string>
    <string name="end">Event ends</string>
    <string name="start">Event starts</string>
    <string name="nav_open">nav_open</string>
    <string name="nav_close">nav_close</string>
    <string name="phone_number">Phone number</string>
    <string name="description">Description</string>
    <string name="ajouter_un_lieu">Ajouter un lieu</string>
    <string name="nom_de_l_evenement">Nom de l\'evenement</string>
    <string name="link_text">https://mailtrap.io/register/signup?ref=header</string>
    <string name="chat">chat</string>


</resources>