<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/disconnectIcon"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/homeIcon"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/messageIcon"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/message"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/searchIcon"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/profilIcon"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile"
        app:showAsAction="always"
        />
</menu>