<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.view.sign_in_up.Sign_up">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/doitup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sacramento"
        android:text="@string/do_it"
        android:textColor="@color/Gold"
        android:textSize="60sp"
        app:layout_constraintEnd_toStartOf="@+id/cardVpdp"
        app:layout_constraintStart_toStartOf="@+id/inputPrenomUp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toEndOf="@+id/doitup"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/cardVpdp"
        android:elevation="12dp"
        app:cardCornerRadius="80dp"
        android:innerRadius="0dp"
        android:shape="ring"
        app:layout_constraintEnd_toEndOf="@+id/inputPrenomUp"
        android:layout_marginTop="4dp"
        android:thicknessRatio="1.9">

        <ImageView
            android:id="@+id/pdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_baseline_account_circle_24"
            android:scaleType="centerCrop"/>
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPrenomUp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"

            android:layout_marginEnd="32dp"
            android:hint="Full Name"
            android:textColorHint="@color/Gold"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardVpdp"
            app:startIconDrawable="@drawable/ic_baseline_account"
            app:startIconTint="@color/Gold">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPrenomUpET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColorHighlight="@color/Gold" />
    </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputnomUp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/phone_number"
            android:textColorHint="@color/Gold"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputPrenomUp"
            app:startIconDrawable="@drawable/ic_baseline_phone_android_24"
            app:startIconTint="@color/Gold">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHighlight="@color/Gold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmailUp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/email"
            android:textColorHint="@color/Gold"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputnomUp"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconTint="@color/Gold">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmailUpET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHighlight="@color/Gold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputDateN"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/data"
            android:textColorHint="@color/Gold"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmailUp"
            app:startIconDrawable="@drawable/ic_baseline_date"
            app:startIconTint="@color/Gold">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputBirthUpET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textColorHighlight="@color/Gold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputAdresse"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/adresse"
            android:textColorHint="@color/Gold"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputDateN"
            app:startIconDrawable="@drawable/ic_baseline_adresse"
            app:startIconTint="@color/Gold">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputAddressUpET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:textColorHighlight="@color/Gold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/password"
            android:textColorHint="@color/Gold"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputAdresse"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/Gold"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHighlight="@color/Gold"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPasswordConf"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/confpass"
            android:textColorHint="@color/Gold"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/Gold"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPasswordConfET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHighlight="@color/Gold" />
        </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnsignup"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        app:backgroundTint="@color/Gold"
        app:layout_constraintEnd_toEndOf="@+id/inputPasswordConf"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/inputPasswordConf"
        app:layout_constraintTop_toBottomOf="@+id/inputPasswordConf" />





</androidx.constraintlayout.widget.ConstraintLayout>